--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: 400;
